# hams

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Cargo.toml  Dockerfile  LICENSE  Makefile  Makefile.am  README.md  build.rs  buildFromClean.sh  configfile.yaml  configure.ac  hams.h
.github/workflows/: docker-publish.yml  rust.yml
ffi-log2/: Cargo.toml  build.rs  cbindgen.toml  ffi-log2.h
ffi-log2/src/: lib.rs
hams/: Cargo.toml  README.md  build.rs  cbindgen.toml  rust-toolchain.toml
hams-core/: Cargo.toml  rust-toolchain.toml
hams-core/src/: error.rs  hams.rs  tokio_tools.rs
hams-core/src/health/: check.rs
hams/benches/: access.rs
hams/src/: error.rs  ffi.rs  hams.rs  hams2.rs  hams_unused.rs  healthcheck.rs  healthkicked.rs  lib.rs  preflight.rs  tokio_tools.rs  webservice.rs  wuggle_unused.rs
hams/src/hams/: check.rs  config.rs  mod.rs  webservice.rs
hams/src/health/: check.rs  health_check.rs  health_probe.rs  health_probe2.rs  health_result.rs  kick.rs  manual.rs  mod.rs  owned_probe.rs
hams/src/health/probe/: get.rs  kick.rs  manual.rs  mod.rs
hams/src/probe/: ffitraits.rs  kick.rs  manual.rs  mod.rs
hams/src/utils/: dyn_hash.rs  mod.rs
hamsrs/: Cargo.toml
hamsrs/src/: ffi.rs  hamserror.rs
hamsrs/src/ffi/: ffitraits.rs  mod.rs
hamsrs/src/hams/: config.rs  mod.rs
hamsrs/src/probes/: custom.rs  kick.rs  manual.rs  mod.rs
helm/hams-sample/: Chart.yaml  values-rust.yaml  values.yaml
helm/hams-sample/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/hams-sample/templates/tests/: test-connection.yaml
playground/: Cargo.toml  README.md
playground/src/: error.rs  ffi.rs  file_handle.rs  hams.rs  health.rs  health_check.rs  health_kick.rs  health_manual.rs  health_probe.rs  health_wrapper.rs  lib.rs  main.rs  not_main.rs  owned.rs
rust_cli/: Cargo.toml
rust_cli/src/: error.rs  ffi.rs  lib.rs  main.rs
sample-c/: hello.c
sample-kotlin/: .gitignore  Makefile.am  pom.xml
sample-kotlin/src/main/java/: MyJava.java
sample-kotlin/src/main/java/com/polecatworks/: .gitignore
sample-kotlin/src/main/kotlin/com/polecatworks/kotlin/samples/: HamsForeign.kt  HamsForeign.notkt  Hello.kt  hams.kt  hams2.kt
sample-kotlin/src/test/kotlin/com/polecatworks/kotlin/samples/: HelloTest.kt
sample-rust/: Cargo.toml  Dockerfile  Makefile.am  config.yaml  helm-values.yaml
sample-rust/src/: config.rs  ffi.rs  hams.rs  hamserror.rs  lib.rs  main.rs  sample.rs  sampleerror.rs  smoke.rs
sample-rust/src/client/: error.rs  mod.rs  tokio_tools.rs
sample-rust/src/hams/: mod.rs
sample-rust/src/probes/: manual.rs  mod.rs
sample-rust/test_data/: config.yaml
sample-ts/: tsconfig-node.json  tsconfig.json
sample-ts/src/commands/: start.ts
src/: error.rs  hams.rs  lib.rs  main.rs
src-c/: Makefile.am  hello.c
src-ts/: Makefile.am  package-lock.json  package.json
src-ts/src/: cli.ts
src-ts/src/commands/: start.ts
