# [package]
# name = "hamsworkspace"
# # Health And Monitoring System
# version = "0.1.0"
# edition = "2021"
# authors = ["Ben Greene <BenJGreene@gmail.com>"]



[workspace]
members = [
    "rust_cli",
    "hams",
]
# exclude = ["rust_cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
