[package]
name = "hams"
# Health And Monitoring System
version = "0.1.0"
edition = "2021"
authors = ["Ben Greene <BenJGreene@gmail.com>"]

[dependencies]
log = { version = "~0.4", features = ["release_max_level_info"] }
ffi-log2 = { path = "../ffi-log2" }
ffi_helpers = "~0.3"
libc = "~0.2"
aquamarine = { version =  "~0.1" }
tokio = { version = "~1.23", features = ["full"] }
warp = "~0.3"
futures = "~0.3"
serde = { version = "~1.0", features = ['std', 'derive'] }
criterion = "~0.3"


[build-dependencies]
cbindgen = "~0.24"


[profile.release]
lto = true
codegen-units = 1
# strip = true # Automatically strip symbols from the binary. (ONLY available in nightly)

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = [ "cdylib" ]

[dev-dependencies]
aquamarine = "~0.1"
cargo-tarpaulin = "~0.22"
criterion = { version = "~0.3", features = ["html_reports"] }

[[bench]]
name = "access"
harness = false
