[package]
name = "hamsrs"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { version = "~0.4", features = ["release_max_level_info"] }
ffi-log2 = { path = "../ffi-log2" }
libc = "~0.2"
thiserror = "~1.0"
thin_trait_object = { version = "~1.1" }
ffi_helpers = "~0.3"
derive_builder = {version = "~0.20"}
serde = { version = "~1.0", features = ['std', 'derive'] }

hams = { path = "../hams"}
