[package]
name = "rust_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "~4.0", features = ["derive"] }
env_logger = "~0.9"
log = { version = "~0.4", features = ["release_max_level_info"] }
ffi-log2 = { path = "../ffi-log2" }
hams = { path = ".." }
libc = "~0.2"

[dev-dependencies]
aquamarine = "0.1.12"
