[package]
name = "sample-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["warp"]
warp = ["dep:warp"]
# axum = ["dep:axum"]


[dependencies]
clap = { version = "~4.4", features = ["derive"] }
env_logger = "~0.10"
log = { version = "~0.4", features = ["release_max_level_info"] }
ffi-log2 = { path = "../ffi-log2" }
hams = { path = "../hams" }
libc = "~0.2"
ffi_helpers = "~0.3"
tokio = { version = "~1.33", features = ["full"] }
futures = {version ="~0.3"}
figment = { version = "~0.10", features = ["yaml", "env"] }
serde = { version = "~1.0", features = ['std', 'derive'] }
warp = { version = "^0.3", optional = true }
# axum = { version = "0.6.7", optional= true }
aquamarine = "~0.3"
serde_json = "~1.0"


[dev-dependencies]
aquamarine = "~0.3"
