[package]
name = "sample-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "~4.5", features = ["derive"] }
env_logger = "~0.11"
log = { version = "~0.4", features = ["release_max_level_info"] }
ffi-log2 = { path = "../ffi-log2" }
hams = { path = "../hams" }
libc = "~0.2"
serde = { version = "~1.0", features = ['std', 'derive'] }
figment = { version = "~0.10", features = ["yaml", "env"] }
