[package]
name = "sample-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "~4.5", features = ["derive"] }
env_logger = "~0.11"
log = { version = "~0.4", features = ["release_max_level_info"] }
ffi-log2 = { path = "../ffi-log2" }
hams = { path = "../hams-core" }
libc = "~0.2"
serde = { version = "~1.0", features = ['std', 'derive'] }
figment = { version = "~0.10", features = ["yaml", "env"] }

# for client
reqwest = {version ="~0.12", features = [ "json"] }
tokio = { version = "~1", features = ["full"] }
thiserror = "~1.0"
futures = "~0.3"
serde_json = { version="~1.0" }
